Fix iptables iface and mgetty welcome string

--- a/etc/mgetty/mgetty.config
+++ b/etc/mgetty/mgetty.config
@@ -13,7 +13,7 @@
 
 # set the global debug level to "4" (default from policy.h)
 debug 9
-login-prompt Welcome to dialup.world! \r\nIf you are not here for internet access, try: [fozz] [zork] [finalzone] or [recamp]
+login-prompt Welcome to dialup.world! \r\nIf you are not here for internet access, try: [fozz] [zork] [finalzone] or [recamp]\r\nlogin:\040
 # set the local fax station id
 #fax-id  
 
