--- a/etc/sysctl.conf
+++ b/etc/sysctl.conf
@@ -54,6 +54,7 @@
 # Do not accept IP source route packets (we are not a router)
 #net.ipv4.conf.all.accept_source_route = 0
 #net.ipv6.conf.all.accept_source_route = 0
+net.ipv4.conf.all.route_localnet=1
 #
 # Log Martian Packets
 #net.ipv4.conf.all.log_martians = 1
