--- a/etc/mgetty/login.config
+++ b/etc/mgetty/login.config
@@ -72,9 +72,9 @@
 #  default will do exactly this.
 #
 #*	-	-	/bin/login @
-dial	-	-	/bin/login @
-fozz	-	-	/usr/bin/telnet bbs.fozztexx.com
-zork	-	-	/usr/bin/telnet multizork.icculus.org
-recamp	-	-	/usr/bin/telnet bbs.retrocampus.com
-finalzone	-	-	/usr/bin/telnet final-zone.net
+#dial	-	-	/bin/login @
+fozz	-	-	/usr/bin/telnet -E bbs.fozztexx.com
+zork	-	-	/usr/bin/telnet -E multizork.icculus.org
+recamp	-	-	/usr/bin/telnet -E bbs.retrocampus.com
+finalzone	-	-	/usr/bin/telnet -E final-zone.net
 *	-	-	/usr/sbin/pppd auth -chap +pap noauth debug
